@@ -21,6 +21,7 @@ enum {
 	HXQUOTE_SQUOTE = 1,
 	HXQUOTE_DQUOTE,
 	HXQUOTE_HTML,
+	HXQUOTE_LDAPFLT,
 	_HXQUOTE_MAX,
 };
 
