@@ -10,6 +10,7 @@ Enhancements:
 - format2: add the %(shell) function
 - format2: security feature for %(exec) and %(shell)
 - format2: add the %(snl) function
+- string: HX_strquote gained HXQUOTE_LDAPFLT (LDAP search filter) support
 Changes:
 - format1: removed older formatter in favor of format2
 - format2: add check for empty key
